Refactor IPGrabber to use HttpURLConnection
Refactored IPGrabber class to use HttpURLConnection for better error handling and updated the webhook URL.